syntax = "proto3";

package vn.techres.microservice.grpc.nodejs_food_channel_processor.channel_order_food_report;

service ChannelOrderFoodReportService {
  rpc getListChannelOrderHistory (ChannelOrderHistoryRequest) returns (ChannelOrderHistoryBaseResponse) {} ; 
  rpc getChannelFoodRevenueSumaryReport (ChannelFoodRevenueSumaryReportRequest) returns (ChannelFoodRevenueSumaryBaseResponse) {} ; 
  rpc getCustomerChannelFoodInformationReport (CustomerChannelFoodInformationReportRequest) returns (CustomerChannelFoodInformationReportBaseResponse) {} ; 
  rpc getChannelFoodReport (GetChannelFoodReportRequest) returns (ChannelFoodReportResultResponse) {};
  rpc getChannelFoodSumaryDataReport (ChannelFoodRevenueSumaryDataReportRequest) returns (ChannelFoodReportSumaryDataResultResponse) {};
  rpc getChannelFoodOrdersReport (ChannelFoodRevenueOrderReportRequest) returns (ChannelFoodOrderReportResultResponse) {};
  rpc getEarningSumaryReport (GetEarningSumaryReportRequest) returns (EarningSumaryReportResultResponse) {} ; 
  rpc getEarningSumaryReportV2 (GetEarningSumaryReportRequest) returns (EarningSumaryReportResultResponse) {} ; 

}

message Empty {
}

message BaseEmptyResponse {
  int32 status = 1;
  string message = 2;
  Empty data = 3;
}

// ---------- getListChannelOrderHistory ---------------

message ChannelOrderHistoryRequest {
    int32 restaurant_id = 1;
    int32 restaurant_brand_id = 2;
    int32 branch_id = 3;
    int32 food_channel_id = 4;
    string from_date = 5;
    string to_date = 6;
}

message ChannelOrderHistoryResponse {
    int32 id = 1;
    string order_id = 2;
    string channel_branch_id = 3;
    int32 total_amount = 4;
    int32 channel_order_food_id = 5;
    string channel_order_food_name = 6;
    string channel_order_food_code = 7;
    string order_created_at = 8;
    string display_id = 9;
    int32 is_completed = 10;
}

message ChannelOrderHistoryOutputResponse {
    repeated ChannelOrderHistoryResponse list = 1 ;
    int32 total_order_completed = 2;
    int32 total_order_cancelled = 3;
    int32 total_revenue = 4;
    int32 total_revenue_SHF = 5;
    int32 total_revenue_GRF = 6;
    int32 total_revenue_GOF = 7;
    int32 total_revenue_BEF = 8;
}


message ChannelOrderHistoryBaseResponse {
  int32 status = 1;
  string message = 2;
  ChannelOrderHistoryOutputResponse data = 3;
}


// ---------- getChannelFoodRevenueSumaryReport ---------------

message ChannelFoodRevenueSumaryReportRequest {
    int32 restaurant_id = 1;
    int32 restaurant_brand_id = 2;
    int32 branch_id = 3;
    int32 food_channel_id = 4;
    int32 hour_to_take_report = 5;
    int32 group_type = 6;
    string from_date = 7;
    string to_date = 8;
}

message ChannelFoodRevenueSumaryResponse {
    string report_date = 1;
    int32 total_order_SHF = 2;
    int32 total_order_GRF = 3;
    int32 total_order_GOF = 4;
    int32 total_order_BEF = 5;
    double commission_amount_SHF = 6;
    double commission_amount_GRF = 7;
    double commission_amount_GOF = 8;
    double commission_amount_BEF = 9;
    double order_amount_SHF = 10;
    double order_amount_GRF = 11;
    double order_amount_GOF = 12;
    double order_amount_BEF = 13;
    double total_amount_SHF = 14;
    double total_amount_GRF = 15;
    double total_amount_GOF = 16;
    double total_amount_BEF = 17;
}

message ChannelFoodRevenueSumaryOutputResponse {
    repeated ChannelFoodRevenueSumaryResponse list = 1;
    int32 total_order = 2;
    int32 total_order_SHF = 3;
    int32 total_order_GRF = 4;
    int32 total_order_GOF = 5;
    int32 total_order_BEF = 6;
    double total_revenue = 7;
    double total_revenue_SHF = 8;
    double total_revenue_GRF = 9;
    double total_revenue_GOF = 10;
    double total_revenue_BEF = 11;
    double percent_SHF = 12;
    double percent_GRF = 13;
    double percent_GOF = 14;
    double percent_BEF = 15;
}

message ChannelFoodRevenueSumaryBaseResponse {
  int32 status = 1;
  string message = 2;
  ChannelFoodRevenueSumaryOutputResponse data = 3;
}

// ---------- getCustomerChannelFoodInformationReport ---------------

message CustomerChannelFoodInformationReportRequest {
    int32 restaurant_id = 1;
    int32 restaurant_brand_id = 2;
    string branch_ids = 3;
    int32 channel_order_food_id = 4;
    string from_date_string = 5;
    string to_date_string = 6;
    string key_search = 7;
    int32 limit = 8;
    int32 offset = 9;
}

message CustomerChannelFoodInformationReportResponse {
    int32 id = 1;
    string customer_name = 2;
    string customer_phone = 3;
    string customer_address = 4;
    int32 total_order = 5;
    int32 total_order_SHF = 6;
    int32 total_order_GRF = 7;
    int32 total_order_GOF = 8;
    int32 total_order_BEF = 9;

    int32 total_order_amount_SHF = 10;
    int32 total_order_amount_BEF = 11;
    int32 total_order_amount_GRF = 12;
    int32 total_order_amount = 13;

    int32 total_amount_avg_SHF = 14;
    int32 total_amount_avg_GRF = 15;
    int32 total_amount_avg_BEF = 16;
    int32 total_amount_avg = 17;

}


message CustomerChannelFoodInformationReportOutputResponse {
    repeated CustomerChannelFoodInformationReportResponse list = 1;
    int32 total_customer_buy_once = 2;
    int32 total_customer_buy_two = 3;
    int32 total_customer_buy_three = 4;
    int32 total_customer_buy_much = 5;
    int32 total_record = 6;
    int32 total_order = 7;
    int32 total_order_SHF = 8;
    int32 total_order_GRF = 9;
    int32 total_order_GOF = 10;
    int32 total_order_BEF = 11;
    int32 limit = 12;
    int32 total_order_amount_SHF = 13;
    int32 total_order_amount_BEF = 14;
    int32 total_order_amount_GRF = 15;
    int32 total_order_amount = 16;
}

message CustomerChannelFoodInformationReportBaseResponse {
  int32 status = 1;
  string message = 2;
  CustomerChannelFoodInformationReportOutputResponse data = 3;
}

// ---------- getChannelFoodReport -----------------

message GetChannelFoodReportRequest{
  int32 restaurant_id = 1;
  int32 restaurant_brand_id = 2;
  int32 branch_id = 3;
  int32 hour_to_take_report = 4;
  string from_date_string = 5;
  string to_date_string = 6;
  string key_search = 7;
  int32 limit = 8;
  int32 offset = 9;
}

message ChannelFoodReportResponse {
    string food_name = 1;
    int32 total_quantity = 2;
    int32 shf_quantity = 3;
    int32 grf_quantity = 4;
    int32 bef_quantity = 5;
}

message BaseListChannelFoodReportResponse {
    repeated ChannelFoodReportResponse list = 1;
    int32 limit = 2;
    int32 total_record = 3;
}

message  ChannelFoodReportResultResponse{
  int32 status = 1;
  string message = 2;
  BaseListChannelFoodReportResponse data = 3;
}

// ---------- getChannelFoodSumaryDataReport ---------------

message ChannelFoodRevenueSumaryDataReportRequest {
    int32 restaurant_id = 1;
    int32 restaurant_brand_id = 2;
    int32 branch_id = 3;
    int32 food_channel_id = 4;
    int32 hour_to_take_report = 5;
    int32 group_type = 6;
    string from_date = 7;
    string to_date = 8;
}

message ChannelFoodSumaryDataReportResponse {
    double commission_amount_SHF = 1;
    double commission_amount_GRF = 2;
    double commission_amount_BEF = 3;
    double total_commission_amount = 4;

    double order_amount_SHF = 5;
    double order_amount_GRF = 6;
    double order_amount_BEF = 7;
    double total_order_amount = 8;

    double total_amount_SHF = 9;
    double total_amount_GRF = 10;
    double total_amount_BEF = 11;
    double total_revenue_amount = 12;

    double discount_amount_SHF = 13;
    double discount_amount_GRF = 14;
    double discount_amount_BEF = 15;
    double total_discount_amount = 16;

}

message  ChannelFoodReportSumaryDataResultResponse{
  int32 status = 1;
  string message = 2;
  ChannelFoodSumaryDataReportResponse data = 3;
}


       		
// ---------- getChannelFoodOrdersReport ---------------

message ChannelFoodRevenueOrderReportRequest {
    int32 restaurant_id = 1;
    int32 restaurant_brand_id = 2;
    int32 branch_id = 3;
    int32 channel_order_food_id = 4;
    int32 hour_to_take_report = 5;
    string from_date = 7;
    string to_date = 8;
    int32 offset = 9;
    int32 limit = 10;
    string key_search = 11;

}

message ChannelFoodOrderReportResponse {
  int32 id = 1;   
  string order_id = 2;                                                        
  string display_id = 3;                         
  string customer_name = 4;                      
  string customer_phone = 5;                     
  double order_amount = 6;                       
  double commission_amount = 7;                   
  double customer_discount_amount = 8;           
  double total_amount = 9;                 
}

message BaseListChannelFoodOrderReportResponse {
    repeated ChannelFoodOrderReportResponse list = 1;
    int32 limit = 2;
    int32 total_record = 3;
}

message  ChannelFoodOrderReportResultResponse{
  int32 status = 1;
  string message = 2;
  BaseListChannelFoodOrderReportResponse data = 3;
}

// ---------------------- getEarningSumaryReport ------------------------
message GetEarningSumaryReportRequest {
	int32 restaurant_id = 1;
  int32 restaurant_brand_id = 2;
  int32 branch_id = 3;
  string channel_branch_id = 4;
  string from_date = 5;
  string to_date = 6;
}

message EarningSumaryReportResponse {
  double net_sales = 1;
  double net_total = 2;
  double total_orders = 3;
  string breakdown_by_category = 4;
}

message EarningSumaryReportResultResponse {
  int32 status = 1;
  string message = 2;
  EarningSumaryReportResponse data = 3;
}